# projet-2-iot-sante

./: .env.example  .gitignore  README.md  docker-compose.yml  repo-name.md  sortie.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  logging.py  main.py  models.py  profiles.py  summary.py
backend/app/alerts/: engine.py  escalation.py  fugue.py  publisher.py  rules.py  store.py
backend/app/api/: alerts.py  health.py  residents.py  rooms.py  staff.py
backend/app/ingest/: client.py  handlers.py  topics.py
backend/app/ml/: anomaly.py  bootstrap.py  risk.py  trend.py
backend/app/storage/: influx.py  redis.py
backend/tests/: test_alert_store.py  test_anomaly.py  test_bootstrap.py  test_engine.py  test_escalation.py  test_handlers.py  test_ml_window.py  test_redis_cache.py  test_risk.py  test_rules.py  test_topics.py  test_trend.py
docs/: api.md  architecture.md  demo.md  infra-quickstart.md
docs/superpowers/plans/: 2026-04-29-alert-engine.md  2026-04-29-backend-ingest.md  (+5 more)
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
mosquitto/config/: mosquitto.conf
simulator/: Dockerfile  README.md  profiles.json  pyproject.toml
simulator/app/: api.py  config.py  logging.py  main.py  profiles.py  publisher.py  resident.py  scenarios.py
simulator/app/sensors/: ambient.py  motion.py  vitals.py
simulator/tests/: test_resident.py  test_scenarios.py
ws-gateway/: Dockerfile  README.md  package.json  server.js
(+25 files in other folders)
