[project]
name = "ehpad-backend"
version = "0.1.0"
description = "EHPAD backend: MQTT ingest, Redis state cache, InfluxDB history, REST API."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "paho-mqtt>=2.0",
  "redis>=5.0",
  "influxdb-client>=1.40",
  "pydantic>=2.6",
  "structlog>=24.1",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "fakeredis>=2.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
