[project]
name = "ehpad-simulator"
version = "0.1.0"
description = "EHPAD resident sensor simulator publishing to MQTT."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "paho-mqtt>=2.0",
  "pydantic>=2.6",
  "structlog>=24.1",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.sensors"]
